[tool.poetry]
name = "windstomp"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
