[tool.poetry]
name = "windstomp"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pygame = "^2.5.0"
numpy = "^1.25.2"
scipy = "^1.11.1"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
